<?xml version="1.0" encoding="UTF-8"?>

    <menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single"/>


    <item android:title="@string/profile">


    <menu>


    <group android:checkableBehavior="single">

    <item android:title="@string/profile" android:icon="@drawable/ic_people_black_24dp" android:id="@+id/nav_profile"/>

    <item android:title="@string/logout" android:icon="@drawable/logout" android:id="@+id/nav_logout"/>

</group>

</menu>

</item>


    <item android:title="@string/communicate">


    <menu>

    <item android:title="@string/share" android:icon="@drawable/ic_reply_black_24dp" android:id="@+id/nav_share"/>

    <item android:title="@string/rate_us" android:icon="@drawable/review1" android:id="@+id/nav_rate"/>

</menu>

</item>

</menu>