<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".ResultActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:orientation="vertical"
        android:paddingEnd="30dp"
        android:paddingStart="30dp"
        android:background="@color/colorPrimary"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/result_text_High_Score"
            android:text="@string/high_score"
            android:textSize="40sp"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:textAlignment="textStart"
            android:layout_width="match_parent"
            android:layout_marginBottom="7dp"
            android:padding="10dp"
            android:layout_height="wrap_content" />


        <TextView
            android:id="@+id/result_total_Ques"
            android:text="@string/total"
            android:textSize="30sp"
            android:textColor="#FFFFFF"
            android:textAlignment="textStart"
            android:layout_width="match_parent"
            android:layout_marginBottom="7dp"
            android:padding="10dp"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/result_Correct_Ques"
            android:text="@string/correct"
            android:textSize="30sp"
            android:textColor="#FFFFFF"
            android:textAlignment="textStart"
            android:layout_width="match_parent"
            android:layout_marginBottom="7dp"
            android:padding="10dp"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/result_Wrong_Ques"
            android:text="@string/wrong"
            android:textSize="30sp"
            android:textColor="#FFFFFF"
            android:textAlignment="textStart"
            android:layout_width="match_parent"
            android:padding="10dp"
            android:layout_height="wrap_content" />


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:weightSum="2"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/result_bt_playAgain"
                android:text="@string/play_again"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textStyle="bold"
                android:layout_weight="1"
                android:textColor="#FFFFFF"
                android:textSize="22sp"
                android:layout_marginEnd="10dp"
                android:padding="10dp"
                android:background="@drawable/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/result_bt_mainmenu"
                android:text="@string/main_menu"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textStyle="bold"
                android:layout_weight="1"
                android:textColor="#FFFFFF"
                android:layout_marginStart="10dp"
                android:textSize="22sp"
                android:padding="10dp"
                android:background="@drawable/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </LinearLayout>


</LinearLayout>