<?xml version="1.0" encoding="UTF-8"?>

    <androidx.drawerlayout.widget.DrawerLayout tools:context=".MainActivity" tools:openDrawer="start" android:fitsSystemWindows="true" android:id="@+id/drawer_layout" android:layout_height="match_parent" android:layout_width="match_parent" xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:android="http://schemas.android.com/apk/res/android">

    <com.google.android.material.navigation.NavigationView android:id="@+id/nav_view" android:layout_height="match_parent" android:layout_width="wrap_content" android:layout_gravity="start" app:menu="@menu/main_menu" app:headerLayout="@layout/header_menu"/>


    <ScrollView android:layout_height="wrap_content" android:layout_width="wrap_content" android:background="@color/white">


    <androidx.constraintlayout.widget.ConstraintLayout android:layout_height="wrap_content" android:layout_width="match_parent" android:background="#FFFFFF">

    <androidx.appcompat.widget.Toolbar android:id="@+id/toolbar" android:layout_height="wrap_content" android:layout_width="0dp" android:background="#00008577" app:navigationIcon="@drawable/menu" app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.0" app:layout_constraintEnd_toEndOf="parent" android:theme="?attr/actionBarTheme" android:minHeight="?attr/actionBarSize"/>

    <TextView android:id="@+id/textView" android:layout_height="wrap_content" android:layout_width="0dp" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/toolbar" app:layout_constraintEnd_toStartOf="@+id/imageView" android:textSize="30sp" android:text="@string/play_quiz" android:layout_marginTop="24dp" android:layout_marginStart="16dp"/>

    <TextView android:id="@+id/textView2" android:layout_height="wrap_content" android:layout_width="0dp" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/textView" app:layout_constraintEnd_toStartOf="@+id/imageView" android:text="@string/it_s_relax_time" android:layout_marginStart="16dp"/>

    <ImageView android:id="@+id/imageView" android:layout_height="160dp" android:layout_width="0dp" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toBottomOf="@+id/toolbar" app:srcCompat="@drawable/quiz2" app:layout_constraintStart_toEndOf="@+id/textView" android:layout_marginEnd="16dp"/>


    <LinearLayout android:id="@+id/linearLayout" android:layout_height="175dp" android:layout_width="0dp" app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.0" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toBottomOf="@+id/imageView" android:padding="10dp" android:orientation="horizontal">


    <androidx.cardview.widget.CardView android:layout_height="match_parent" android:layout_width="0dp" android:layout_weight="1" android:layout_margin="10dp">


    <RelativeLayout android:layout_height="match_parent" android:layout_width="match_parent">

    <TextView android:id="@+id/textView3" android:layout_height="wrap_content" android:layout_width="wrap_content" android:textSize="24sp" android:text="@string/quran" android:layout_marginTop="10dp" android:layout_centerHorizontal="true" android:layout_below="@id/GK"/>

    <ImageView android:id="@+id/GK" android:layout_height="75dp" android:layout_width="75dp" android:layout_marginTop="15dp" app:srcCompat="@drawable/quran" android:layout_centerHorizontal="true"/>

</RelativeLayout>

</androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView android:layout_height="match_parent" android:layout_width="0dp" android:layout_weight="1" android:layout_margin="10dp">


    <RelativeLayout android:layout_height="match_parent" android:layout_width="match_parent">

    <TextView android:id="@+id/textView4" android:layout_height="wrap_content" android:layout_width="wrap_content" android:textSize="24sp" android:text="@string/islamic" android:layout_marginTop="10dp" android:layout_centerHorizontal="true" android:layout_below="@id/islamic"/>

    <ImageView android:id="@+id/islamic" android:layout_height="75dp" android:layout_width="75dp" android:layout_marginTop="15dp" app:srcCompat="@drawable/kaaba" android:layout_centerHorizontal="true"/>

</RelativeLayout>

</androidx.cardview.widget.CardView>

</LinearLayout>


    <LinearLayout android:id="@+id/linearLayout2" android:layout_height="175dp" android:layout_width="0dp" app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.0" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toBottomOf="@+id/linearLayout" android:padding="10dp" android:orientation="horizontal">


    <androidx.cardview.widget.CardView android:layout_height="match_parent" android:layout_width="0dp" android:layout_weight="1" android:layout_margin="10dp">


    <RelativeLayout android:layout_height="match_parent" android:layout_width="match_parent">

    <TextView android:id="@+id/textView5" android:layout_height="wrap_content" android:layout_width="wrap_content" android:textSize="24sp" android:text="@string/dua" android:layout_marginTop="10dp" android:layout_centerHorizontal="true" android:layout_below="@id/football"/>

    <ImageView android:id="@+id/football" android:layout_height="75dp" android:layout_width="75dp" android:layout_marginTop="15dp" app:srcCompat="@drawable/dua" android:layout_centerHorizontal="true"/>

</RelativeLayout>

</androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView android:layout_height="match_parent" android:layout_width="0dp" android:layout_weight="1" android:layout_margin="10dp">


    <RelativeLayout android:layout_height="match_parent" android:layout_width="match_parent">

    <TextView android:id="@+id/textView6" android:layout_height="wrap_content" android:layout_width="wrap_content" android:textSize="24sp" android:text="@string/hadis" android:layout_marginTop="10dp" android:layout_centerHorizontal="true" android:layout_below="@id/cricket"/>

    <ImageView android:id="@+id/cricket" android:layout_height="75dp" android:layout_width="75dp" android:layout_marginTop="15dp" app:srcCompat="@drawable/hadis" android:layout_centerHorizontal="true" android:contentDescription="@string/todo"/>

</RelativeLayout>

</androidx.cardview.widget.CardView>

</LinearLayout>


    <LinearLayout android:layout_height="175dp" android:layout_width="0dp" app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.0" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toBottomOf="@+id/linearLayout2" android:padding="10dp" android:orientation="horizontal">


    <androidx.cardview.widget.CardView android:layout_height="match_parent" android:layout_width="0dp" android:layout_weight="1" android:layout_margin="10dp">


    <RelativeLayout android:layout_height="match_parent" android:layout_width="match_parent">

    <TextView android:id="@+id/textView7" android:layout_height="wrap_content" android:layout_width="wrap_content" android:textSize="24sp" android:text="@string/islam_and_science" android:layout_marginTop="10dp" android:layout_centerHorizontal="true" android:layout_below="@id/science"/>

    <ImageView android:id="@+id/science" android:layout_height="75dp" android:layout_width="75dp" android:layout_marginTop="15dp" app:srcCompat="@drawable/science" android:layout_centerHorizontal="true" android:contentDescription="@string/todo"/>

</RelativeLayout>

</androidx.cardview.widget.CardView>

</LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>

</androidx.drawerlayout.widget.DrawerLayout>